feat: update, delete, send attachment for user
